--- a/ICPoaps/makefile
+++ b/ICPoaps/makefile
@@ -1,4 +1,4 @@
-.PHONY: start-testnet deploy-backend deploy update-backend update
+.PHONY: start-testnet deploy-backend deploy-frontend deploy update-backend update-frontend update
 
 start-testnet:
 	sudo dfx start --clean
@@ -6,11 +6,17 @@ start-testnet:
 deploy-backend:
 	sudo dfx deploy ICPoaps_backend
 
+deploy-frontend:
+	sudo dfx deploy ICPoaps_frontend
+
 deploy:
 	sudo dfx deploy
 
 update-backend:
 	sudo dfx deploy ICPoaps_backend
+
+update-frontend:
+	sudo dfx deploy ICPoaps_frontend
 
 update:
 	sudo dfx deploy
