--- a/ICPoaps/makefile
+++ b/ICPoaps/makefile
@@ -1,4 +1,4 @@
-.PHONY: start-testnet deploy-backend deploy-frontend deploy update-backend update-frontend update
+.PHONY: all clean build start-testnet deploy-backend deploy-frontend deploy view-frontend update-backend update-frontend update
 
 start-testnet:
 	sudo dfx start --clean
@@ -11,6 +11,9 @@ deploy-frontend:
 
 deploy:
 	sudo dfx deploy
+
+view-frontend:
+	npm start
 
 update-backend:
 	sudo dfx deploy ICPoaps_backend
