--- a/ICPoaps/package.json
+++ b/ICPoaps/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@dfinity/agent": "^0.18.1",
+    "@dfinity/auth-client": "^0.18.1",
     "@dfinity/candid": "^0.18.1",
     "@dfinity/principal": "^0.18.1",
     "react": "^18.2.0",
