--- a/ICPoaps/package.json
+++ b/ICPoaps/package.json
@@ -21,6 +21,7 @@
     "@dfinity/auth-client": "^0.18.1",
     "@dfinity/candid": "^0.18.1",
     "@dfinity/principal": "^0.18.1",
+    "ethers": "^6.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
