--- a/ICPoaps/makefile
+++ b/ICPoaps/makefile
@@ -1,4 +1,15 @@
-.PHONY: all clean build start-testnet deploy-backend deploy-frontend deploy view-frontend update-backend update-frontend update
+.PHONY: help start-testnet deploy-backend deploy-frontend deploy view-frontend update-backend update-frontend update
+
+help:
+	@echo "all commands except view-frontend require sudo"
+	@echo "  start-testnet   -- to start the local testnet"
+	@echo "  deploy-backend  -- to deploy the backend canister"
+	@echo "  deploy-frontend -- to deploy the frontend canister (and the backend canister)"
+	@echo "  deploy          -- to deploy the full application"
+	@echo "  view-frontend   -- to view the frontend canister using npm"
+	@echo "  update-backend  -- to update the backend canister"
+	@echo "  update-frontend -- to update the frontend canister"
+	@echo "  update          -- to update the full application"
 
 start-testnet:
 	sudo dfx start --clean
